module-1/apps/whoami/whoami.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/traefikee-webapp-demo

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: whoami
  namespace: apps
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: whoami
status:
  loadBalancer: {}
